test: Add comprehensive unit tests with JUnit 5 and Mockito